WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306129
[GTK] error: call to 'gst_check_version' is ambiguous
https://bugs.webkit.org/show_bug.cgi?id=306129
Summary
[GTK] error: call to 'gst_check_version' is ambiguous
Jeremy Bicha
Reported
2026-01-23 10:43:03 PST
- webkitgtk 2.51.90 - gstreamer 1.27.90 - Ubuntu 26.04 LTS devel webkitgtk is failing to build in Ubuntu 26.04 LTS which already has gstreamer 1.27.90. I expect gstreamer 1.28.0 to be released next week. It looks like
https://github.com/WebKit/WebKit/pull/53872
needs to be fixed. Build excerpt ========== In file included from /<<PKGBUILDDIR>>/build-gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-56.cpp:2: /<<PKGBUILDDIR>>/Source/WebCore/platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:72:14: error: call to 'gst_check_version' is ambiguous 72 | if (!gst_check_version(1, 20, 0)) | ^~~~~~~~~~~~~~~~~ /usr/include/gstreamer-1.0/gst/gst.h:134:17: note: candidate function 134 | gboolean gst_check_version (guint major, guint minor, guint micro); | ^ /<<PKGBUILDDIR>>/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:62:13: note: candidate function 62 | inline bool gst_check_version(guint major, guint minor, guint micro) | ^ 1 error generated. [8647/9439] Build log =======
https://launchpad.net/~jbicha/+archive/ubuntu/arch/+build/32183464
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-01-23 11:46:21 PST
If you really have GStreamer 1.27.90 I don't see how the WebKit gst_check_version is picked-up, it should be only for versions < 1.27.2.1.
Philippe Normand
Comment 2
2026-01-23 11:49:31 PST
That was fixed in
https://bugs.webkit.org/show_bug.cgi?id=302779
... do you have that commit?
Jeremy Bicha
Comment 3
2026-01-23 13:08:01 PST
Yes, that commit is included and yes, the build logs show that gstreamer 1.27.90 is being used.
https://github.com/WebKit/WebKit/pull/54175
Philippe Normand
Comment 4
2026-01-24 02:00:23 PST
The GST_CHECK_VERSION_FULL macro is incorrect, it would need to be more elaborate... I'll just remove it for now, since we can check for 1.27.90 now that it is out.
Philippe Normand
Comment 5
2026-01-24 02:12:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57171
Jeremy Bicha
Comment 6
2026-01-24 13:06:52 PST
I confirm that pull request fixes my issue.
EWS
Comment 7
2026-01-25 00:55:32 PST
Committed
306164@main
(6ab4390e676d): <
https://commits.webkit.org/306164@main
> Reviewed commits have been landed. Closing PR #57171 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug