[GTK] error: call to 'gst_check_version' is ambiguous https://bugs.webkit.org/show_bug.cgi?id=306129

Reviewed by Adrian Perez de Castro.

Remove the GST_CHECK_VERSION_FULL macro which would evaluate the check for 1.27.2.1 to false on a
host with 1.27.90 installed. We can check for 1.27.90 directly instead.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:

Canonical link: https://commits.webkit.org/306164@main