Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h
@@ -55,10 +55,7 @@ using TrackID = uint64_t;
 template<typename MappedArg>
 using TrackIDHashMap = HashMap<TrackID, MappedArg, WTF::IntHash<TrackID>, WTF::UnsignedWithZeroKeyHashTraits<TrackID>>;
 
-#define GST_CHECK_VERSION_FULL(major, minor, micro, nano) \
-    (GST_CHECK_VERSION(major, minor, micro) && (GST_VERSION_NANO >= nano))
-
-#if !GST_CHECK_VERSION_FULL(1, 27, 2, 1)
+#if !GST_CHECK_VERSION(1, 27, 90)
 inline bool gst_check_version(guint major, guint minor, guint micro)
 {
     guint currentMajor, currentMinor, currentMicro, currentNano;
@@ -494,7 +491,7 @@ private:
 GstBuffer* gst_buffer_new_memdup(gconstpointer data, gsize size);
 #endif
 
-#if !GST_CHECK_VERSION_FULL(1, 27, 2, 1) && !GST_CHECK_VERSION(1, 27, 3) && !GST_CHECK_VERSION(1, 28, 0)
+#if !GST_CHECK_VERSION(1, 27, 3)
 void gst_pad_probe_info_set_buffer(GstPadProbeInfo*, GstBuffer*);
 void gst_pad_probe_info_set_event(GstPadProbeInfo*, GstEvent*);
 #endif
